--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon"
   },
   "author": "Micael",
@@ -12,9 +12,13 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.2.2",
     "mongoose": "^5.6.9",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "request": "^2.88.0",
+    "should": "^13.2.3"
   }
 }
